--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>contact</title>
 
-    <form action="form.html" method="post">
+    <form action="form.html">
   
       <h3>contact</h3>
   
