--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>contact</title>
 
-    <form action="form.html">
+    
   
       <h3>contact</h3>
   
@@ -72,8 +72,9 @@
         </textarea>
       </div>
       <button type="submit" class="Form8">送信</button>
+      <a href="form.html"> sousinn</a>
   
-    </form>
+    
 
 
 </body>
