送信ボタンから　完了ページに移動

--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
         <textarea name="contacttext" class="Form7" id="contacttext" cols="50" rows="10" required>
         </textarea>
       </div>
-      <button type="submit" class="Form8">送信</button>
-      <a href="form.html"> sousinn</a>
+      <a href="form.html"><button type="submit" class="Form8">送信</button></a>
   
     
 
